Hamburger Menu fix
Fixed bug that caused an overlap with hamburger menu

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a:hover {
 .hamburger-menu {
   position: relative;
   display: inline-block;
-  z-index: 2; /* Ensure hamburger menu is above other content */
+  z-index: 3; /* Ensure hamburger menu is above other content */
 }
 
 .hamburger-icon {
@@ -104,7 +104,8 @@ a:hover {
   max-height: 0;
   overflow: hidden;
   transition: all 0.3 ease-in-out;
-  z-index: 1; /* Ensure menu links are above other content */
+  z-index: 2; /* Ensure menu links are above other content */
+  border-radius: 10px; /* Rounded corners for the menu */
 }
 
 .menu-links a {
@@ -115,6 +116,7 @@ a:hover {
   color: black;
   text-decoration: none;
   transition: all 0.3 ease-in-out;
+  border-radius: 10px; /* Rounded corners for the menu items */
 }
 
 .menu-links li {
@@ -147,6 +149,13 @@ a:hover {
 
 .hamburger-icon span:first-child {
   transform: none;
+}
+
+/* BLUR EFFECT */
+
+.blur-content {
+  filter: blur(5px);
+  transition: filter 0.3s ease-in-out;
 }
 
 /* SECTIONS */
@@ -472,7 +481,7 @@ footer p {
     justify-content: space-between;
     align-items: center;
     padding: 1rem; /* Add padding for better spacing */
-    z-index: 3; /* Ensure hamburger menu is above other content */
+    z-index: 4; /* Ensure hamburger menu is above other content */
   }
 
   section {
